index.css
/*================== General ======================*/

  * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

  html, body {
    overflow-x: hidden;
    font-family: "Zilla Slab", sans serif;
    font-size: 1rem;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
    background: #F8F8F7;
  }

  h1, h2, h3, h4, h5, h6 {
    color: #934B19;
    text-align: center;
  }

  h3 {
  }

  p {
    color: #934B19;
  }

  .card:hover {
    background-color: #f0f0f0;
    transform: scale(1.02);
    transition: transform 0.4s ease;
  }
/*==================== End =======================*/

/*=================== Navbar =====================*/
  .navbar {
    height: 3.5rem;
    background-color: #F1E7D4 !important;
    font-weight: bold;
  }

  .navbar-collapse {
    background-color: #F1E7D4;
    z-index: 100;
  }

  nav img {
    height: 30px;
  }

  nav a:hover {
    background-color: #ddd;
    color: black;
  }
/*==================== End =======================*/

/*================== Landing =====================*/
  #landing .container {
    position: relative;
    width: 100%;
  }

  #landing img {
    display: block;
    width: 100%;
    height: auto;
  }

  #landing .cover {
    position: absolute;
    bottom: 1vh;
    left: 17px; 
    text-align: justify-content;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    background-size: 90vw;
    padding: 10px;
    line-height: 1;
  }

  .landing-text:nth-of-type(1) {
    font-weight: bold;
    font-size: 2rem;
    margin-bottom: 5px;
  }

  .landing-text:nth-of-type(2) {
    font-weight: bold;
    font-size: 1.2rem;
    margin-bottom: 5px;
  }
/*==================== End =======================*/

/*=================== Work =======================*/
  #work {
    background: #F1E7D4 !important;
    text-align: center;
    max-width: 1250px;
  }

  #work .container {
    max-width: 1000px;
    height: auto;
  }

  #work h2 {
    font-style: italic;
  }

  #work .container > .row:nth-of-type(1) > div:hover {
    transform: scale(1.05);
    transition: transform 0.3s ease;
  }

  #work .container > .row:nth-of-type(1) > div {
    max-width: 30vw;
    border: 2px solid #934B19;
    border-radius: 25px;
    display: relative;
    background: #F8F8F7;
    place-items: center;
  }

  #work .container > .row:nth-of-type(1) > div * {
    display: relative;
  }

  #work .row:nth-of-type(1) {
    display: relative;
    justify-content: center;
  }

  #work .row:nth-of-type(2) {
    display: flex;
    justify-content: center;
  }

  #work .container > .row:nth-of-type(1) img {
    max-height: 150px;
    width: auto;
    display: grid
    margin-bottom: none;
  }

  #work .container > .row:nth-of-type(2) img {
    max-height: 120px;
    width: auto;
  }
/*==================== End =======================*/

/*================== Projects ====================*/
  #projects .container {
    max-width: 75vw;
  } 

  #projects img {
    min-height: 10px;
    width: auto;
  }

  #projects .row {
    text-align: center;
    border: 1px;
  } 

  #projects h1 {
    text-align: center;
  }
/*==================== End =======================*/

/*=================== Tools ======================*/
  #tools {
    align-items: center;
  }

  #tools .row > * {
    border: 2px solid white;
    border-bottom-left-radius: 25px;
    border-top-right-radius: 25px;
    max-width: 230px;
    backdrop-filter: blur(10px);
  }

  #tools .container {
    background-image: url("./images/blueweave3.png");
    position: relative;
    text-align: justify-content;
    background-size: 100vw;
    padding: 10px;
    line-height: 1;
  }

  #tools .container img {
    max-height: 100%;
    width: auto;
  }

  #tools h5, #tools h1 {
    color: #F8F8F7 !important;
  }

  #tools .justify-content-center > img {
    max-width: 200px;
    height: auto;
    opacity: none !important;
  }
/*==================== End =======================*/

/*================= Affiliations =================*/
  #affiliations {
    text-align: center;
    max-width: 500px;
    min-width:400px;
  }

  #affiliations .container {
    display: relative;
    max-width: 380px;
    justify-content: center;
    background: #F8F8F7 !important;
    border: 5px solid #934B19;
    border-radius: 25px;
  }

  #affiliations .row:nth-of-type(1) img {
    max-width: 300px;
    height: auto;
  }

  #affiliations .row:nth-of-type(2) img {
    max-width: 100px;
    height: auto;
  }

/*==================== End =======================*/

/*================== Contact =====================*/
  #gmap {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #contact img {
    height: 30px;
  }

  #form {
    background-color: #1e3a5f;
  }

  .socials {
    text-align: center;
  }

  form label.d-block {
    color: #f0f0f0;
  }
/*==================== End =======================*/

/*=================== Extra ======================*/
  #backtotop img {
    position: fixed;
    bottom: 8px;
    left: 10px;
    z-index: 99;
    width: 40px;
    height: 40px;
    cursor: pointer;
  }

  #backtotop:hover {
    background-color: #0056b3;
  }
/*==================== End =======================*/

/*=================== Footer =====================*/
  #footer {
    text-align: center;
    background: #321200;
    line-height: 1.1;
    font-size: 0.8rem;
    color: #FFFFFF;
  }
/*==================== End =======================*/

